test/fail_compilation/fail7695.d
struct Bar {
    const int t;
}

void main( ) {
    int[Bar] a;
    int n = a.length;
}

